# WaterShader

./: CMakeLists.txt  README.md
assets/models/: Landscape.mtl
assets/shaders/: phong_simple.fs.glsl  phong_simple.vs.glsl  skybox.fs.glsl  skybox.vs.glsl  water.fs.glsl  water.vs.glsl
src/: main.cpp
src/utils/: camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  mesh_instance.cpp  mesh_instance.hpp  model.cpp  model.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  texture2d.cpp  texture2d.hpp  textureCube.cpp  textureCube.hpp
